// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkChip should render correctly 1`] = `
<div
  className="bpk-chip"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className=""
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly when not "dismissible" 1`] = `
<div
  className="bpk-chip"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
</div>
`;

exports[`BpkChip should render correctly with a "className" attribute 1`] = `
<div
  className="bpk-chip custom-class"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className=""
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with a "closeLabel" function attribute 1`] = `
<div
  className="bpk-chip"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className=""
    customIcon={null}
    label="Custom close (this is a chip!)"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render correctly with a "closeLabel" string attribute 1`] = `
<div
  className="bpk-chip"
>
  <span
    className="bpk-chip__label"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className=""
    customIcon={null}
    label="close it"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render primary correctly 1`] = `
<div
  className="bpk-chip bpk-chip--primary"
>
  <span
    className="bpk-chip__label bpk-chip__label--primary"
  >
    This is a Chip!
  </span>
  <BpkCloseButton
    className="bpk-chip--primary-icon"
    customIcon={null}
    label="Close"
    onClick={[Function]}
  />
</div>
`;

exports[`BpkChip should render primary correctly when not "dismissible" 1`] = `
<div
  className="bpk-chip bpk-chip--primary"
>
  <span
    className="bpk-chip__label bpk-chip__label--primary"
  >
    This is a Chip!
  </span>
</div>
`;
